# claytontv

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc.json  CONTRIBUTORS.md  Pipfile  README.md  books.csv  components.json  db.sqlite3  db.sqlite3-journal  eslint.config.ts  fake_data.py  importer.py  importer2.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  seeder  seeder.py  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: ci.yaml  deploy-to-production.yaml  deploy.yml  format.yml  github_actions.yml  tests.yml
CSV/: Bible Books.csv  Demographics.csv  Labels.csv  Link Table.xlsx  Ministry.csv  Series.csv  Speakers.csv  Topics.csv  mapper.csv
CSV/Old/: Demographics.csv
CSV/Old/Old/: Channel.csv  Demographics.csv
about/: urls.py  views.py
app/: asgi.py  base.py  base_settings.py  local.py  local_settings.py  production.py  production_settings.py  settings.py  test.py  test_settings.py  urls.py  views.py  wsgi.py
app/Utilities/: importer.py
app/http/middleware/: __init__.py  handle_inertia_requests.py
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_speaker_series.py  0003_video_bible_book.py  0004_series_summary.py  0005_alter_series_options.py  0006_ministry_video_ministry.py  0007_topic_summary_video_idnum_video_islivestream_and_more.py
catalog/templates/: about.html  base_generic.html  base_generic_old.html  contact.html  donate.html  help.html  index copy.html  index.html  privacy.html  subscribe.html
catalogue/: admin.py  models.py  tests.py  urls.py  views.py
catalogue/migrations/: 0001_initial.py  0002_alter_series_year_end_alter_series_year_start_and_more.py  0003_rename_title_video_name.py  0004_alter_bible_book_name_alter_bible_book_type.py  0005_alter_bible_book_name.py  0006_alter_channel_ministry_alter_channel_videos_and_more.py  0007_alter_bible_book_name.py  0007_alter_bible_book_name_alter_topic_category.py  0008_series_id_number_video_thumbnail_alter_speaker_id_and_more.py  0009_remove_series_id_number.py  0010_series_id_number.py  0011_alter_topic_id.py  0012_alter_topic_id.py  0013_merge_0007_alter_bible_book_name_0012_alter_topic_id.py  0014_remove_series_id_number_alter_topic_category.py  0015_alter_topic_category.py  0016_alter_video_url.py  0017_alter_video_id_number.py  0018_series_id_number.py  0019_alter_video_id_number_alter_video_url.py  0020_alter_series_name.py
catalogue/models/: ___ToDo.txt  __init__.py  bible_book.py  channel.py  demograpic.py  label.py  ministry.py  series.py  speaker.py  topic.py  video.py
claytontv/: asgi.py  settings.py  urls.py  wsgi.py
getinvolved/: apps.py  urls.py  views.py
livestreams/: apps.py  urls.py  views.py
management/commands/: importer.py
resources/css/: app.css
resources/js/: app.js  app.ts  inertia-helpers.js
staff/: urls.py  views.py
static/: urls.py  views.py
staticfiles/: staticfiles.json
staticfiles/css/: styles.css  styles.e43399d384a7.css
templates/: 40x.html  50x.html  app.html
tests/: test_app_settings.py
topics/: apps.py  urls.py  views.py
(+140 files in other folders)
